--- a/playground/vue/src/index.css
+++ b/playground/vue/src/index.css
@@ -6,3 +6,10 @@ body {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   background-color: var(--color-h00)
 }
+
+.content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
