feat: refactor collapsible component and add ReadMore functionality
- Replaced the existing `Collapsiable` component with a new `Collapsible` component, enhancing its structure and functionality.
- Introduced a `ReadMore` component to provide expandable content functionality.
- Updated styles and TypeScript interfaces for better integration and usability.
- Added examples in the playground to demonstrate the new `Collapsible` and `ReadMore` components.
- Included `@faker-js/faker` as a dependency for generating example content.

--- a/packages/themes/src/base/animations.css
+++ b/packages/themes/src/base/animations.css
@@ -43,21 +43,21 @@
 
   @keyframes collapsible-down {
     from {
-      height: 0px;
+      height: var(--collapsed-height, 0px);
     }
 
     to {
-      height: var(--reka-collapsible-content-height, 0px);
+      height: var(--height, 0px);
     }
   }
 
   @keyframes collapsible-up {
     from {
-      height: var(--reka-collapsible-content-height, 0px);
+      height: var(--height, 0px);
     }
 
     to {
-      height: 0px;
+      height: var(--collapsed-height, 0px);
     }
   }
 
