--- a/packages/themes/src/razer/index.css
+++ b/packages/themes/src/razer/index.css
@@ -4,3 +4,4 @@
 @import './components/badge.css';
 @import './components/button.css';
 @import './components/checkbox.css';
+@import './components/collapsible.css';
