--- a/packages/themes/src/razer/index.css
+++ b/packages/themes/src/razer/index.css
@@ -5,3 +5,4 @@
 @import './components/button.css';
 @import './components/checkbox.css';
 @import './components/collapsible.css';
+@import './components/input.css';
