--- a/packages/themes/src/razer/components/collapsible.css
+++ b/packages/themes/src/razer/components/collapsible.css
@@ -1,7 +1,10 @@
-@layer utilities {
+@layer components {
   .rui-readmore {
     @apply relative;
   }
+}
+
+@layer utilities {
   .rui-readmore-trigger {
     &[data-state='closed'] {
       @apply absolute bottom-0 right-0 pl-10 py-1 pr-1 bg-linear-[90deg,transparent_0%,var(--color-h1a)_27%];
