--- a/packages/themes/src/razer/index.css
+++ b/packages/themes/src/razer/index.css
@@ -8,3 +8,4 @@
 @import './components/input.css';
 @import './components/editable.css';
 @import './components/tooltip.css';
+@import './components/dialog.css';
