--- a/packages/themes/src/razer/components/hover-card.css
+++ b/packages/themes/src/razer/components/hover-card.css
@@ -1,19 +1,20 @@
 @layer components {
-  .rui-tooltip-content {
+  .rui-hover-card-content {
     @apply data-bordered:border-h00;
     @apply dark:data-bordered:border-hff;
   }
 
-  .rui-tooltip-content-inner {
+  .rui-hover-card-content-inner {
     @apply bg-hff data-bordered:border-h00 text-h00;
     @apply dark:bg-h00 dark:data-bordered:border-hff dark:text-hff;
   }
 
-  .rui-tooltip-arrow {}
+  .rui-hover-card-arrow {
+  }
 
-  .rui-tooltip-arrow-tip {
+  .rui-hover-card-arrow-tip {
     --arrow-background: var(--color-hff);
-    &:where([data-skin=dark], [data-skin=dark] *) {
+    &:where([data-mode='dark'], [data-mode='dark'] *) {
       --arrow-background: var(--color-h00);
     }
     @apply bg-hff data-bordered:border-h00;
