--- a/packages/themes/src/razer/index.css
+++ b/packages/themes/src/razer/index.css
@@ -9,3 +9,4 @@
 @import './components/editable.css';
 @import './components/tooltip.css';
 @import './components/dialog.css';
+@import './components/hover-card.css';
