--- a/packages/themes/src/razer/perset.css
+++ b/packages/themes/src/razer/perset.css
@@ -1,6 +1,6 @@
 @import '../base/index.css';
 
-@custom-variant dark (&:where([data-mode=dark], [data-mode=dark] *));
+@custom-variant dark (&:where([data-skin=dark], [data-skin=dark] *));
 @custom-variant success (&:where([data-variant=success], [data-variant=success] *));
 @custom-variant error (&:where([data-variant=error], [data-variant=error] *));
 @custom-variant warning (&:where([data-variant=warning], [data-variant=warning] *));
