--- a/packages/themes/src/razer/index.css
+++ b/packages/themes/src/razer/index.css
@@ -10,3 +10,4 @@
 @import './components/tooltip.css';
 @import './components/dialog.css';
 @import './components/hover-card.css';
+@import './components/popover.css';
