--- a/packages/themes/src/razer/components/popover.css
+++ b/packages/themes/src/razer/components/popover.css
@@ -1,22 +1,27 @@
 @layer components {
-  .rui-tooltip-content {
+  .rui-popover-content {
     @apply data-bordered:border-h00;
     @apply dark:data-bordered:border-h33;
   }
 
-  .rui-tooltip-content-inner {
+  .rui-popover-content-inner {
     @apply bg-hff data-bordered:border-h00 text-h00;
     @apply dark:bg-h00 dark:text-hff;
   }
 
-  .rui-tooltip-arrow {}
+  .rui-popover-arrow {}
 
-  .rui-tooltip-arrow-tip {
+  .rui-popover-arrow-tip {
     --arrow-background: var(--color-hff);
     &:where([data-skin=dark], [data-skin=dark] *) {
       --arrow-background: var(--color-h00);
     }
     @apply bg-hff data-bordered:border-h00;
     @apply dark:bg-h00 dark:data-bordered:border-h33;
+  }
+
+  .rui-popover-close{
+    @apply text-rui-close hover:text-h00;
+    @apply dark:hover:text-rui-close-hover;
   }
 }
