--- a/packages/themes/src/razer/index.css
+++ b/packages/themes/src/razer/index.css
@@ -11,3 +11,4 @@
 @import './components/dialog.css';
 @import './components/hover-card.css';
 @import './components/popover.css';
+@import './components/switch.css';
