feat: introduce Menu component with customizable features and integrate into existing structure
- Added a new `Menu` component along with its related components: `MenuArrow`, `MenuContent`, and `MenuTrigger`.
- Implemented customizable properties such as `size`, `bordered`, and `unstyled` for enhanced flexibility.
- Created corresponding styles for the `Menu` components in the themes package.
- Updated playground examples to demonstrate the new `Menu` functionality and its integration with existing components.
- Enhanced TypeScript support for better type safety and usability across the new components.

--- a/packages/themes/src/razer/components/popover.css
+++ b/packages/themes/src/razer/components/popover.css
@@ -1,26 +1,18 @@
 @layer components {
   .rui-popover-content {
+    --border-radius: var(--radius);
+    @apply shadow-rui-popper;
     @apply data-bordered:border-h00;
     @apply dark:data-bordered:border-h33;
   }
 
+  .rui-popover-content,
   .rui-popover-content-inner {
-    @apply bg-hff data-bordered:border-h00 text-h00;
+    @apply bg-hff text-h00;
     @apply dark:bg-h00 dark:text-hff;
   }
 
-  .rui-popover-arrow {}
-
-  .rui-popover-arrow-tip {
-    --arrow-background: var(--color-hff);
-    &:where([data-skin=dark], [data-skin=dark] *) {
-      --arrow-background: var(--color-h00);
-    }
-    @apply bg-hff data-bordered:border-h00;
-    @apply dark:bg-h00 dark:data-bordered:border-h33;
-  }
-
-  .rui-popover-close{
+  .rui-popover-close {
     @apply text-rui-close hover:text-h00;
     @apply dark:hover:text-rui-close-hover;
   }
