--- a/packages/themes/src/razer/components/hover-card.css
+++ b/packages/themes/src/razer/components/hover-card.css
@@ -1,23 +1,14 @@
 @layer components {
   .rui-hover-card-content {
+    --border-radius: var(--radius);
+    @apply shadow-rui-popper;
     @apply data-bordered:border-h00;
     @apply dark:data-bordered:border-h33;
   }
 
+  .rui-hover-card-content,
   .rui-hover-card-content-inner {
-    @apply bg-hff data-bordered:border-h00 text-h00;
+    @apply bg-hff text-h00;
     @apply dark:bg-h00 dark:text-hff;
-  }
-
-  .rui-hover-card-arrow {
-  }
-
-  .rui-hover-card-arrow-tip {
-    --arrow-background: var(--color-hff);
-    &:where([data-mode='dark'], [data-mode='dark'] *) {
-      --arrow-background: var(--color-h00);
-    }
-    @apply bg-hff data-bordered:border-h00;
-    @apply dark:bg-h00 dark:data-bordered:border-h33;
   }
 }
