--- a/packages/themes/src/razer/index.css
+++ b/packages/themes/src/razer/index.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss';
 @import './perset.css';
 
+@import './components/arrow.css';
 @import './components/badge.css';
 @import './components/button.css';
 @import './components/checkbox.css';
@@ -12,3 +13,4 @@
 @import './components/hover-card.css';
 @import './components/popover.css';
 @import './components/switch.css';
+@import './components/menu.css';
