feat: enhance Menu component with new item and group functionalities
- Introduced `MenuItem`, `MenuItemGroup`, and `MenuTriggerItem` components for better organization and usability within the `Menu`.
- Updated `MenuContent` to support item selection and improved structure for nested menus.
- Enhanced styling and TypeScript definitions for new components to ensure better type safety and flexibility.
- Updated playground examples to demonstrate the new menu functionalities and their integration with existing components.

--- a/packages/themes/src/razer/components/menu.css
+++ b/packages/themes/src/razer/components/menu.css
@@ -19,6 +19,22 @@
   /** bg & text */
   .rui-menu-content,
   .rui-menu-content-inner {
-    @apply bg-h1a text-hcc;
+    @apply bg-h1a;
+  }
+
+  .rui-menu-item {
+    @apply bg-transparent
+    text-hcc
+    data-highlighted:bg-hff/10
+    data-highlighted:text-hff
+    data-[state=open]:bg-hff/10
+    data-[state=open]:text-hff;
+  }
+
+  .rui-menu-item-group-label {
+    @apply text-hff font-rz-bold;
+  }
+  .rui-menu-separator {
+    @apply border-h11;
   }
 }
