--- a/packages/themes/src/razer/index.css
+++ b/packages/themes/src/razer/index.css
@@ -15,3 +15,4 @@
 @import './components/popover.css';
 @import './components/switch.css';
 @import './components/menu.css';
+@import './components/select.css';
