feat: enhance Slider component with new Marker functionality
- Added `SliderMarker` and `SliderTooltipMarker` components to improve user interaction and display of values on the Slider.
- Updated `slider.ts` to include a new `marker` variant for better customization.
- Enhanced existing components to support the new `skin` prop for theming.
- Modified playground examples to demonstrate the new Marker features in the Slider component.

--- a/packages/themes/src/razer/components/arrow.css
+++ b/packages/themes/src/razer/components/arrow.css
@@ -1,12 +1,19 @@
 @layer components {
   *:where([data-part='arrow']) {
     --arrow-background: var(--color-hff);
+
     &[data-skin='dark'] {
       --arrow-background: var(--color-h00);
     }
+
+    &[data-skin='razer'] {
+      --arrow-background: var(--color-rz-green);
+    }
   }
+
   *:where([data-part='arrow-tip']) {
     @apply bg-hff data-bordered:border-h00;
     @apply dark:bg-h00 dark:data-bordered:border-h33;
+    @apply razer:bg-rz-green razer:data-bordered:border-h00;
   }
 }
