--- a/packages/themes/src/razer/components/tooltip.css
+++ b/packages/themes/src/razer/components/tooltip.css
@@ -4,11 +4,13 @@
     @apply shadow-rui-popper;
     @apply data-bordered:border-h00;
     @apply dark:data-bordered:border-h33;
+    @apply razer:border-h00;
   }
 
   .rui-tooltip-content,
   .rui-tooltip-content-inner {
     @apply bg-hff text-h00;
     @apply dark:bg-h00 dark:text-hff;
+    @apply razer:bg-rz-green razer:text-h00;
   }
 }
