--- a/packages/themes/src/razer/index.css
+++ b/packages/themes/src/razer/index.css
@@ -20,3 +20,4 @@
 @import './components/message.css';
 @import './components/slider.css';
 @import './components/tabs.css';
+@import './components/scroll-area.css';
