--- a/packages/themes/src/razer/index.css
+++ b/packages/themes/src/razer/index.css
@@ -23,3 +23,4 @@
 @import './components/scroll-area.css';
 @import './components/toggle.css';
 @import './components/toggle-group.css';
+@import './components/progress.css';
