--- a/packages/themes/src/razer/index.css
+++ b/packages/themes/src/razer/index.css
@@ -28,3 +28,4 @@
 @import './components/spin.css';
 @import './components/tags-input.css';
 @import './components/skeleton.css';
+@import './components/rating-group.css';
