feat: update DatePicker component with new views and enhanced theming
- Introduced Month and Year views to the DatePicker component for improved date selection flexibility.
- Updated DatePicker styling and theming to support new view types and enhance visual consistency.
- Refactored DatePickerContent to manage view states more effectively, integrating new properties for view handling.
- Enhanced CSS styles for DatePicker components to reflect updated theming and visual states.
- Added examples demonstrating the new Month and Year views in the DatePicker.

--- a/packages/themes/src/razer/components/date-picker.css
+++ b/packages/themes/src/razer/components/date-picker.css
@@ -3,14 +3,24 @@
     @apply bg-h1a text-hcc border-h11 shadow-rui-popper;
   }
 
-  .rui-date-picker-table-body-cell {
-    &:has([data-selected]),
-    &:has([data-selected][data-outside-range]) {
-      @apply bg-rz-green text-h00;
+  .rui-date-picker-table-header {
+    @apply text-hff font-rob-bold;
+  }
+
+  .rui-date-picker-table-body-cell-trigger {
+    &[data-selected],
+    &[data-selected][data-outside-range] {
+      @apply bg-rz-green text-h00 ;
     }
 
-    &:has([data-outside-range]) {
+    &[data-outside-range] {
       @apply bg-h47;
+    }
+
+    &[data-today] {
+      &:after {
+        @apply  bg-rz-green;
+      }
     }
   }
 }
