--- a/packages/themes/src/razer/index.css
+++ b/packages/themes/src/razer/index.css
@@ -32,3 +32,4 @@
 @import './components/pagination.css';
 @import './components/number-input.css';
 @import './components/date-picker.css';
+@import './components/tree.css';
